# polars-examples

./: .gitattributes  .gitignore  README.md  big_query.py  blogpost.md  capabilities.py  clean_raw_input.py  coerce_clean_input.py  download_data.sh  gharchive_data_sample.json  gharchive_data_sample.jsonl  node2.js  node_clean_input.py  node_coerce_input.py  node_metrics.js  open_prs_by_year_month.py  open_prs_last_month.py  package-lock.json  package.json  poc-wip.js  process_gharchive.py  process_gharchive.sh  pyproject.toml  schema.py
node-metrics/: package-lock.json  package.json
node-metrics/data/: node.json
node-metrics/src/: createChart.js  dataLoader.js  index.js  metricsCalculator.js  visualizer.js
scripts/: process_files.py  process_gharchive.sh
