[tool.poetry]
name = "example-polars"
version = "0.1.0"
description = ""
authors = ["Denis Germano <denis.germano@nearform.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.7.1"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
